name:                flatland
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/krisajenkins/flatland#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
copyright:           2017 Kris Jenkins
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , ansi-wl-pprint
                     , safe
                     , containers
  default-language:    Haskell2010

executable flatland-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , flatland
  default-language:    Haskell2010

test-suite flatland-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , flatland
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/flatland
